border plus sh utils

--- a/cpp/makefile
+++ b/cpp/makefile
@@ -18,6 +18,9 @@ abstract2 : chess/disp/main.cpp chess/disp/brd_disp.h chess/disp/abstract.cpp ch
 pieces : chess/disp/main.cpp chess/disp/brd_disp.h chess/disp/pieces.cpp chess/include/pieces.h
 	g++ -o ~/bin/pieces chess/disp/main.cpp chess/disp/pieces.cpp -I/Users/btobrien/dev/chess_worm/cpp
 
+border : chess/disp/main.cpp chess/disp/brd_disp.h chess/disp/pieces.cpp chess/include/pieces.h
+	g++ -o ~/bin/border chess/disp/border.cpp
+
 board.o : chess/board/board.cpp chess/include/board.h chess/board/board_state.h chess/board/white.h chess/board/black.h chess/board/move.h chess/include/squares.h chess/include/pieces.h chess/include/fen.h chess/include/castle_flags.h
 	g++ -c chess/board/board.cpp -I/Users/btobrien/dev/chess_worm/cpp
 
