--- a/src/hs/makefile
+++ b/src/hs/makefile
@@ -8,7 +8,7 @@ peel : Main/Peel.hs Monad/Parser.hs Pgn/Parser.hs
 	ghc -o ~/bin/peel Main/Peel.hs
 
 splay : Main/Splay.hs Tree/Splay.hs Tree/Peel.hs Utils.hs 
-	ghc -o ~/bin/splay2 Main/Splay.hs
+	ghc -o ~/bin/splay Main/Splay.hs
 
 unpeel : Main/Unpeel.hs Pgn/Parser.hs 
 	ghc -o ~/bin/unpeel Main/Unpeel.hs
